--- a/_config - 副本.yml
+++ b/_config - 副本.yml
@@ -23,7 +23,8 @@ email: yannengfa@126.com
 description: >- # this means to ignore newlines until "baseurl:"
    记录、分享
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://youthynf.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: youthynf
 github_username:  youthynf
 
 # Build settings
