--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ url: "https://youthynf.github.io/" # the base hostname & protocol for your site,
 github_username:  youthynf
 
 # Build settings
-theme: minima
+theme: jekyll-theme-chirpy
 plugins:
   - jekyll-feed
