--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ avatar: https://avatars.githubusercontent.com/u/20438133?v=4
 toc: true
 
 disqus:
-  comments: false  # boolean type, the global switch for posts comments.
+  comments: true  # boolean type, the global switch for posts comments.
   shortname: 'ynf'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 paginate: 10
