--- a/_config.yml
+++ b/_config.yml
@@ -15,15 +15,15 @@ timezone: Asia/Shanghai
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: 小小青年                          # the main title
+title: 严能发                          # the main title
 
-tagline: 遥远的目标经不起执着的追求...   # it will display as the sub-title
+tagline: 遥远的目标经不起执着的追求。   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  学习、分享、记录
+  后端开发、学习、分享、记录
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://youthynf.github.io'
 
 github:
   username: youthynf             # change to your github username
@@ -84,7 +84,7 @@ disqus:
   comments: true  # boolean type, the global switch for posts comments.
   shortname: 'ynf'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
-paginate: 5
+paginate: 10
 
 # ------------ The following options are not recommended to be modified ------------------
 
